# ezeit

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/bsp_example/: .gitignore  CMakeLists.txt  main.cpp
example/examplelib/: examplelib.cpp  examplelib.h
example/glogger_write_log/: .gitignore  CMakeLists.txt  main.cpp
example/ni_example/: .gitignore  CMakeLists.txt  main.cpp
example/opencv_example/: .gitignore  CMakeLists.txt  cluster.hpp  clusters.json  clusters_out.json  dscsel.hpp  dscsel_major.hpp  dscsel_unique.hpp  ioiextraction.hpp  main.cpp  qtreefunc_density.hpp  siftfunc_density.hpp  siftfunc_frequency.hpp
example/thrift_client/: .gitignore  CMakeLists.txt  main.cpp  thriftclient
example/thrift_example/: CMakeLists.txt  main.cpp  messenger.thrift
example/thrift_server/: CMakeLists.txt  main.cpp  thrift_server.h  thriftserver
include/: .gitignore  README.md
include/bsp/: QuadTree.h  QuadTreePoint.h
include/gexecutor/: gexecutor_filewriter.h  gexecutor_thrift.h
include/glogger/: glogger.h
include/statistics/: statistics.hpp
include/thrift/: ThriftRWService.cpp  ThriftRWService.h  TransferService.cpp  TransferService.h  TransferService_server.skeleton.cpp  messenger_constants.cpp  messenger_constants.h  messenger_iot_types.cpp  messenger_iot_types.h  messenger_types.cpp  messenger_types.h
include/thrift_iot/: ThriftRWService.cpp  ThriftRWService.h  messenger_iot_constants.cpp  messenger_iot_types.cpp
include/thrift_service/: messenger_constants.h
include/utbyte/: utbyte.hpp
src/: .gitignore  CMakeLists.txt  README.md
src/bsp/: BSPNode.h  BSPPoint.h  BSPPointCollection.h  BSPTree.h  QuadTree.h  QuadTreeNode.h  QuadTreePoint.h  QuadTreePointCollection.h  cp_bsp_to_include.sh
src/example/: CMakeLists.txt  example.cpp  example.h
src/examplelib/: CMakeLists.txt
src/gexecutor/: README.md  cp_gexecutor_to_include.sh  gexecutor_thrift.h  gexecutor_thrift_writemessage.h
src/glogger/: CMakeLists.txt  README.md  cp_glogger_to_include.sh
src/gsubf/: CMakeLists.txt  gsubf.cpp  gsubf.h  gsubf.json  main.cpp
src/gtaskque/: CMakeLists.txt  cp_gtaskque_to_include.sh
src/statistics/: cp_statistics_to_include.sh  statistics.hpp
src/thrift/: README.md  cp_thrift_iot_to_include.sh  cp_thrift_to_include.sh  messenger.thrift
src/thrift/gen-cpp/: ThriftRWService.cpp  ThriftRWService_server.skeleton.cpp  ThriftService.cpp  ThriftService.h  ThriftService_server.skeleton.cpp  messenger_constants.cpp  messenger_constants.h  messenger_iot_constants.cpp  messenger_types.cpp  messenger_types.h
src/thrift/gen-cpp-0.13.0/: ThriftRWService.h  messenger_types.h
src/thrift/gen-cpp-default/: messenger_constants.cpp  messenger_types.cpp  messenger_types.h
src/thrift/gen-cpp_backup/: messenger_types.cpp
src/thrift/gen-cpp_iot/: ThriftRWService.cpp  ThriftRWService.h  messenger_iot_constants.h  messenger_iot_types.cpp  messenger_iot_types.h
src/thrift/gen-cpp_iot-0.13.0/: messenger_iot_constants.cpp  messenger_iot_types.h
src/thrift/gen-java/org/chronotics/talaria/thrift_gen/: InvalidOperationException.java  Message.java  ThriftService.java
src/thrift/gen-py/messenger/: ThriftRWService-remote  ThriftRWService.py  ThriftService-remote  ThriftService.py  TransferService-remote  TransferService.py  __init__.py  ttypes.py
src/utbyte/: CMakeLists.txt  ReadMe.md  cp_utbyte_to_include.sh  utbyte.hpp
test/: .gitignore  CMakeLists.txt  CMakeLists.txt.in
test/example/: .gitignore  CMakeLists.txt  test_example.cpp
test/gen_subfile/: .gitignore  main.cpp
test/unittest/: CMakeLists.txt
test/unittest/gexecutor/: .gitignore  CMakeLists.txt  testgexecutorthrift_client.cpp
test/unittest/gtaskque/: .gitignore  CMakeLists.txt  testgtaskque.cpp
test/unittest/utbyte/: .gitignore  CMakeLists.txt  testutbyte.cpp
